Deployment/kubernetes-nsq/deploy-nsq.yaml
#---
#apiVersion: policy/v1beta1
#kind: PodDisruptionBudget
#metadata:
#  name: nsqd-budget
#  labels:
#    app: nsq
#    component: nsqd
#spec:
#  selector:
#    matchLabels:
#      app: nsq
#      component: nsqd
#  minAvailable: 1
---
apiVersion: v1
kind: Service
metadata:
  name: nsqlookupd
  labels:
    app: nsq
spec:
  ports:
    - port: 4160
      targetPort: 4160
      name: tcp
    - port: 4161
      targetPort: 4161
      name: http
  publishNotReadyAddresses: true
  clusterIP: None
  selector:
    app: nsq
    component: nsqlookupd
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nsqd
#  labels:
#    app: nsq
#spec:
#  ports:
#    - port: 4150
#      targetPort: 4150
#      name: tcp
#    - port: 4151
#      targetPort: 4151
#      name: http
#  clusterIP: None
#  selector:
#    app: nsq
#    component: nsqd
---
apiVersion: v1
kind: Service
metadata:
  name: nsqadmin
  labels:
    app: nsq
spec:
  ports:
    - port: 4170
      targetPort: 4170
      name: tcp
    - port: 4171
      targetPort: 4171
      name: http
  selector:
    app: nsq
    component: nsqadmin
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nsqlookupd
spec:
  serviceName: "nsqlookupd"
  replicas: 3
  selector:
    matchLabels:
      app: nsq
      component: nsqlookupd
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nsq
        component: nsqlookupd
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nsq
                  - key: component
                    operator: In
                    values:
                      - nsqlookupd
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: nsqlookupd
          image: nsqio/nsq:v1.1.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 30m
              memory: 64Mi
          ports:
            - containerPort: 4160
              name: tcp
            - containerPort: 4161
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 2
          command:
            - /nsqlookupd
      terminationGracePeriodSeconds: 5
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nsqd
spec:
  serviceName: "nsqd"
  selector:
    matchLabels:
      app: nsq
      component: nsqd
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nsq
        component: nsqd
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nsq
                  - key: component
                    operator: In
                    values:
                      - nsqd
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: nsqd
          image: nsqio/nsq:v1.1.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 30m
              memory: 64Mi
          ports:
            - containerPort: 4150
              name: tcp
            - containerPort: 4151
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 2
          volumeMounts:
            - name: datadir
              mountPath: /data
          command:
            - /nsqd
            - -data-path
            - /data
            - -lookupd-tcp-address
            - nsqlookupd-0.nsqlookupd:4160
            - -lookupd-tcp-address
            - nsqlookupd-1.nsqlookupd:4160
            - -lookupd-tcp-address
            - nsqlookupd-2.nsqlookupd:4160
            - -broadcast-address
            - $(HOSTNAME).nsqd
      terminationGracePeriodSeconds: 5
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: datadir
  volumeClaimTemplates:
    - metadata:
        name: datadir
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nsqadmin
spec:
  selector:
    matchLabels:
      app: nsq
      component: nsqadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: nsq
        component: nsqadmin
    spec:
      containers:
        - name: nsqadmin
          image: nsqio/nsq:v1.1.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 30m
              memory: 64Mi
          ports:
            - containerPort: 4170
              name: tcp
            - containerPort: 4171
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
          command:
            - /nsqadmin
            - -lookupd-http-address
            - nsqlookupd-0.nsqlookupd:4161
            - -lookupd-http-address
            - nsqlookupd-1.nsqlookupd:4161
            - -lookupd-http-address
            - nsqlookupd-2.nsqlookupd:4161
      terminationGracePeriodSeconds: 5
