Deployment/kubernetes-nsq/scoretrak-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoretrak-web
spec:
  selector:
    matchLabels:
      app: scoretrak
      component: web
  replicas: 3
  template:
    metadata:
      labels:
        app: scoretrak
        component: web
    spec:
      containers:
        - name: scoretrak
          image: l1ghtman/scoretrakweb:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 44444
              name: http
          volumeMounts:
            - name: config-volume
              mountPath: /etc/scoretrak/
          command:
            - ./web
            - -config
            - /etc/scoretrak/config.yml
      volumes:
        - name: config-volume
          configMap:
            name: scoretrak-config

      serviceAccountName: scoretrak



---

apiVersion: v1
kind: Service
metadata:
  name: scoretrak-web
spec:
  type: NodePort
  selector:
    app: scoretrak
    component: web
  ports:
    - port: 44444
      targetPort: 44444
      nodePort: 30080
